# bookpython

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml
app/: config.py  errors.py  handlers.py  init_db.py  mail.py  main.py  middleware.py
app/api/: __init__.py  basket_endpoints.py  book.py  book_endpoints.py  genre_endpoints.py  mail_endpoints.py  order_endpoints.py  user.py  user_endpoints.py  wishlist_endpoints.py
app/db/: __init__.py  database.py  models.py
app/db/initialization/: book_seeding.py  genre_seeding.py  init_db.py
app/db/migrations/: env.py
app/db/migrations/versions/: 01cc8d9c0008_user_and_book_initial.py  0b76493d2453_email.py  0dbf15e3668e_address_data.py  14b62d608182_genre_model.py  28965fed883e_initial_commit.py  (+12 more)
app/exceptions/: handlers.py
app/models/: __init__.py  book.py  user.py
app/schemas/: __init__.py  basket_schemas.py  book.py  book_schemas.py  filter_schemas.py  filters.py  genre_schemas.py  mail_schemas.py  order_schemas.py  user.py  user_schemas.py
app/services/: __init__.py  basket_service.py  book_service.py  genre_service.py  order_service.py  user_service.py  wishlist_service.py
app/tests/: conftest.py  test_auth.py
app/tests/tests_auth/: exec_all.py  test_conf.py  test_users_me.py  tests_users.py  tests_users_me.py
app/tests/tests_basket/: test_conf.py  test_users_me_basket.py
app/tests/tests_books/: test_book_create.py  test_books.py  test_conf.py
app/tests/tests_users/: test_conf.py  test_users.py  test_users_me.py  test_users_me_wishlist.py
